style(benchmark): 统一测试基准代码格式与缩进
- 统一 SerializationBenchmark 类的代码缩进和格式风格
- 统一 StreamConsumerBenchmark 类的代码缩进和格式风格
- 统一 StreamMessageTemplateBenchmark 类的代码缩进和格式风格
- 在 pom.xml 中添加 spotless 插件配置，默认为跳过状态
- 统一核心注解接口的多行注释缩进，提升代码可读性