@@ -35,384 +35,399 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class StreamMQDiagnosticsServiceTest {
 
-  @Mock private StreamMQTraceService traceService;
+    @Mock private StreamMQTraceService traceService;
 
-  @Mock private StreamMQListenerContainer listenerContainer;
+    @Mock private StreamMQListenerContainer listenerContainer;
 
-  private StreamMQDiagnosticsService diagnosticsService;
+    private StreamMQDiagnosticsService diagnosticsService;
 
-  @BeforeEach
-  void setUp() {
-    StreamMQDiagnosticsProperties properties = new StreamMQDiagnosticsProperties();
-    diagnosticsService =
-        new StreamMQDiagnosticsService(traceService, listenerContainer, properties);
-  }
-
-  @Nested
-  @DisplayName("diagnoseSlowConsume - 慢消费诊断")
-  class DiagnoseSlowConsume {
-
-    @Test
-    @DisplayName("正常消费数据 -> 返回完整报告")
-    void shouldReturnReportWithStats() {
-      List<TraceRecord> records = new ArrayList<>();
-      for (int i = 0; i < 10; i++) {
-        records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
-      }
-      for (int i = 0; i < 8; i++) {
-        records.add(
-            consumeRecord("consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
-      }
-
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
-      when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
-
-      SlowConsumeReport report = diagnosticsService.diagnoseSlowConsume("test-topic", "test-group");
-
-      assertThat(report).isNotNull();
-      assertThat(report.topic()).isEqualTo("test-topic");
-      assertThat(report.group()).isEqualTo("test-group");
-      assertThat(report.consumeRate()).isGreaterThan(0);
-      assertThat(report.produceRate()).isGreaterThan(0);
-      assertThat(report.avgConsumeTimeMillis()).isEqualTo(100.0);
-      assertThat(report.maxConsumeTimeMillis()).isEqualTo(100L);
+    @BeforeEach
+    void setUp() {
+        StreamMQDiagnosticsProperties properties = new StreamMQDiagnosticsProperties();
+        diagnosticsService =
+                new StreamMQDiagnosticsService(traceService, listenerContainer, properties);
     }
 
-    @Test
-    @DisplayName("无追踪数据 -> 返回空报告")
-    void shouldReturnEmptyReportWhenNoData() {
-      when(traceService.queryByTopic(eq("empty-topic"), anyLong(), anyLong()))
-          .thenReturn(Collections.emptyList());
-      when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+    @Nested
+    @DisplayName("diagnoseSlowConsume - 慢消费诊断")
+    class DiagnoseSlowConsume {
 
-      SlowConsumeReport report =
-          diagnosticsService.diagnoseSlowConsume("empty-topic", "test-group");
+        @Test
+        @DisplayName("正常消费数据 -> 返回完整报告")
+        void shouldReturnReportWithStats() {
+            List<TraceRecord> records = new ArrayList<>();
+            for (int i = 0; i < 10; i++) {
+                records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
+            }
+            for (int i = 0; i < 8; i++) {
+                records.add(
+                        consumeRecord(
+                                "consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
+            }
 
-      assertThat(report).isNotNull();
-      assertThat(report.consumeRate()).isEqualTo(0.0);
-      assertThat(report.produceRate()).isEqualTo(0.0);
-      assertThat(report.bottleneck()).contains("无追踪数据");
-      assertThat(report.recommendation()).contains("追踪服务");
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
+            when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+
+            SlowConsumeReport report =
+                    diagnosticsService.diagnoseSlowConsume("test-topic", "test-group");
+
+            assertThat(report).isNotNull();
+            assertThat(report.topic()).isEqualTo("test-topic");
+            assertThat(report.group()).isEqualTo("test-group");
+            assertThat(report.consumeRate()).isGreaterThan(0);
+            assertThat(report.produceRate()).isGreaterThan(0);
+            assertThat(report.avgConsumeTimeMillis()).isEqualTo(100.0);
+            assertThat(report.maxConsumeTimeMillis()).isEqualTo(100L);
+        }
+
+        @Test
+        @DisplayName("无追踪数据 -> 返回空报告")
+        void shouldReturnEmptyReportWhenNoData() {
+            when(traceService.queryByTopic(eq("empty-topic"), anyLong(), anyLong()))
+                    .thenReturn(Collections.emptyList());
+            when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+
+            SlowConsumeReport report =
+                    diagnosticsService.diagnoseSlowConsume("empty-topic", "test-group");
+
+            assertThat(report).isNotNull();
+            assertThat(report.consumeRate()).isEqualTo(0.0);
+            assertThat(report.produceRate()).isEqualTo(0.0);
+            assertThat(report.bottleneck()).contains("无追踪数据");
+            assertThat(report.recommendation()).contains("追踪服务");
+        }
+
+        @Test
+        @DisplayName("消费耗时过长 -> 建议优化消费逻辑")
+        void shouldRecommendOptimizationWhenSlowConsume() {
+            List<TraceRecord> records = new ArrayList<>();
+            records.add(sendRecord("send-1", "test-topic", 1000L, 5L));
+            records.add(consumeRecord("consume-1", "test-topic", "test-group", true, 2000L, 8000L));
+
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
+            when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+
+            SlowConsumeReport report =
+                    diagnosticsService.diagnoseSlowConsume("test-topic", "test-group");
+
+            assertThat(report.avgConsumeTimeMillis()).isEqualTo(8000.0);
+            assertThat(report.bottleneck()).contains("消费耗时过长");
+            assertThat(report.recommendation()).contains("优化消费逻辑");
+        }
     }
 
-    @Test
-    @DisplayName("消费耗时过长 -> 建议优化消费逻辑")
-    void shouldRecommendOptimizationWhenSlowConsume() {
-      List<TraceRecord> records = new ArrayList<>();
-      records.add(sendRecord("send-1", "test-topic", 1000L, 5L));
-      records.add(consumeRecord("consume-1", "test-topic", "test-group", true, 2000L, 8000L));
+    @Nested
+    @DisplayName("diagnoseBacklog - 积压诊断")
+    class DiagnoseBacklog {
 
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
-      when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+        @Test
+        @DisplayName("小积压 -> INFO 级别")
+        void shouldReturnInfoSeverityForSmallBacklog() {
+            List<TraceRecord> records = new ArrayList<>();
+            for (int i = 0; i < 10; i++) {
+                records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
+            }
+            for (int i = 0; i < 8; i++) {
+                records.add(
+                        consumeRecord(
+                                "consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
+            }
 
-      SlowConsumeReport report = diagnosticsService.diagnoseSlowConsume("test-topic", "test-group");
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
 
-      assertThat(report.avgConsumeTimeMillis()).isEqualTo(8000.0);
-      assertThat(report.bottleneck()).contains("消费耗时过长");
-      assertThat(report.recommendation()).contains("优化消费逻辑");
-    }
-  }
+            BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
 
-  @Nested
-  @DisplayName("diagnoseBacklog - 积压诊断")
-  class DiagnoseBacklog {
+            assertThat(report).isNotNull();
+            assertThat(report.currentBacklog()).isEqualTo(2);
+            assertThat(report.severity()).isEqualTo(Severity.INFO);
+            assertThat(report.recommendation()).contains("正常范围");
+        }
 
-    @Test
-    @DisplayName("小积压 -> INFO 级别")
-    void shouldReturnInfoSeverityForSmallBacklog() {
-      List<TraceRecord> records = new ArrayList<>();
-      for (int i = 0; i < 10; i++) {
-        records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
-      }
-      for (int i = 0; i < 8; i++) {
-        records.add(
-            consumeRecord("consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
-      }
+        @Test
+        @DisplayName("中等积压 -> WARNING 级别")
+        void shouldReturnWarningSeverityForMediumBacklog() {
+            List<TraceRecord> records = new ArrayList<>();
+            for (int i = 0; i < 1001; i++) {
+                records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
+            }
 
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
 
-      BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
+            BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
 
-      assertThat(report).isNotNull();
-      assertThat(report.currentBacklog()).isEqualTo(2);
-      assertThat(report.severity()).isEqualTo(Severity.INFO);
-      assertThat(report.recommendation()).contains("正常范围");
-    }
+            assertThat(report.currentBacklog()).isEqualTo(1001);
+            assertThat(report.severity()).isEqualTo(Severity.WARNING);
+            assertThat(report.recommendation()).contains("增加消费者实例数");
+        }
 
-    @Test
-    @DisplayName("中等积压 -> WARNING 级别")
-    void shouldReturnWarningSeverityForMediumBacklog() {
-      List<TraceRecord> records = new ArrayList<>();
-      for (int i = 0; i < 1001; i++) {
-        records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
-      }
+        @Test
+        @DisplayName("严重积压 -> CRITICAL 级别")
+        void shouldReturnCriticalSeverityForLargeBacklog() {
+            List<TraceRecord> records = new ArrayList<>();
+            for (int i = 0; i < 10001; i++) {
+                records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
+            }
 
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
 
-      BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
+            BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
 
-      assertThat(report.currentBacklog()).isEqualTo(1001);
-      assertThat(report.severity()).isEqualTo(Severity.WARNING);
-      assertThat(report.recommendation()).contains("增加消费者实例数");
-    }
+            assertThat(report.currentBacklog()).isEqualTo(10001);
+            assertThat(report.severity()).isEqualTo(Severity.CRITICAL);
+            assertThat(report.recommendation()).contains("立即扩容");
+        }
 
-    @Test
-    @DisplayName("严重积压 -> CRITICAL 级别")
-    void shouldReturnCriticalSeverityForLargeBacklog() {
-      List<TraceRecord> records = new ArrayList<>();
-      for (int i = 0; i < 10001; i++) {
-        records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
-      }
+        @Test
+        @DisplayName("无追踪数据 -> 返回空报告")
+        void shouldReturnEmptyReportWhenNoData() {
+            when(traceService.queryByTopic(eq("empty-topic"), anyLong(), anyLong()))
+                    .thenReturn(Collections.emptyList());
 
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
+            BacklogReport report = diagnosticsService.diagnoseBacklog("empty-topic", "test-group");
 
-      BacklogReport report = diagnosticsService.diagnoseBacklog("test-topic", "test-group");
-
-      assertThat(report.currentBacklog()).isEqualTo(10001);
-      assertThat(report.severity()).isEqualTo(Severity.CRITICAL);
-      assertThat(report.recommendation()).contains("立即扩容");
-    }
-
-    @Test
-    @DisplayName("无追踪数据 -> 返回空报告")
-    void shouldReturnEmptyReportWhenNoData() {
-      when(traceService.queryByTopic(eq("empty-topic"), anyLong(), anyLong()))
-          .thenReturn(Collections.emptyList());
-
-      BacklogReport report = diagnosticsService.diagnoseBacklog("empty-topic", "test-group");
-
-      assertThat(report).isNotNull();
-      assertThat(report.currentBacklog()).isEqualTo(0);
-      assertThat(report.severity()).isEqualTo(Severity.INFO);
-      assertThat(report.recommendation()).contains("追踪服务");
-    }
-  }
-
-  @Nested
-  @DisplayName("diagnoseDlq - 死信队列诊断")
-  class DiagnoseDlq {
-
-    @Test
-    @DisplayName("存在失败消费记录 -> 返回失败原因聚合报告")
-    void shouldAggregateFailureReasons() {
-      List<TraceRecord> records = new ArrayList<>();
-      // 消息 fail-a 重试 3 次均失败（达到 DLQ 判定阈值），错误为 NullPointerException
-      for (int i = 0; i < 3; i++) {
-        records.add(
-            consumeRecord(
-                "fail-a",
-                "test-topic",
-                "test-group",
-                false,
-                1000L + i,
-                100L,
-                Map.of("errorMessage", "NullPointerException")));
-      }
-      // 消息 fail-b 重试 3 次均失败，错误为 TimeoutException
-      for (int i = 0; i < 3; i++) {
-        records.add(
-            consumeRecord(
-                "fail-b",
-                "test-topic",
-                "test-group",
-                false,
-                2000L + i,
-                200L,
-                Map.of("errorMessage", "TimeoutException")));
-      }
-      // 消息 fail-c 重试 2 次失败（未达到 DLQ 阈值，不应计入 DLQ）
-      for (int i = 0; i < 2; i++) {
-        records.add(
-            consumeRecord(
-                "fail-c",
-                "test-topic",
-                "test-group",
-                false,
-                3000L + i,
-                150L,
-                Map.of("errorMessage", "NullPointerException")));
-      }
-
-      when(traceService.queryByGroup(eq("test-group"), anyLong(), anyLong())).thenReturn(records);
-
-      DlqReport report = diagnosticsService.diagnoseDlq("test-group");
-
-      assertThat(report).isNotNull();
-      assertThat(report.group()).isEqualTo("test-group");
-      assertThat(report.totalDlqCount()).isEqualTo(2);
-      assertThat(report.topFailureReasons()).isNotEmpty();
-      assertThat(report.topFailureReasons().get(0).reason()).isEqualTo("NullPointerException");
-      assertThat(report.topFailedTopics()).isNotEmpty();
+            assertThat(report).isNotNull();
+            assertThat(report.currentBacklog()).isEqualTo(0);
+            assertThat(report.severity()).isEqualTo(Severity.INFO);
+            assertThat(report.recommendation()).contains("追踪服务");
+        }
     }
 
-    @Test
-    @DisplayName("DLQ 主题记录 -> 正确识别死信消息")
-    void shouldIdentifyDlqMessagesByTopic() {
-      List<TraceRecord> records = new ArrayList<>();
-      records.add(
-          consumeRecord(
-              "dlq-1",
-              "test-topic-dlq",
-              "test-group",
-              false,
-              1000L,
-              50L,
-              Map.of("errorMessage", "DLQ error")));
-      records.add(
-          consumeRecord(
-              "dlq-2",
-              "test-topic-dlq",
-              "test-group",
-              false,
-              2000L,
-              50L,
-              Map.of("errorMessage", "DLQ error")));
+    @Nested
+    @DisplayName("diagnoseDlq - 死信队列诊断")
+    class DiagnoseDlq {
 
-      when(traceService.queryByGroup(eq("test-group"), anyLong(), anyLong())).thenReturn(records);
+        @Test
+        @DisplayName("存在失败消费记录 -> 返回失败原因聚合报告")
+        void shouldAggregateFailureReasons() {
+            List<TraceRecord> records = new ArrayList<>();
+            // 消息 fail-a 重试 3 次均失败（达到 DLQ 判定阈值），错误为 NullPointerException
+            for (int i = 0; i < 3; i++) {
+                records.add(
+                        consumeRecord(
+                                "fail-a",
+                                "test-topic",
+                                "test-group",
+                                false,
+                                1000L + i,
+                                100L,
+                                Map.of("errorMessage", "NullPointerException")));
+            }
+            // 消息 fail-b 重试 3 次均失败，错误为 TimeoutException
+            for (int i = 0; i < 3; i++) {
+                records.add(
+                        consumeRecord(
+                                "fail-b",
+                                "test-topic",
+                                "test-group",
+                                false,
+                                2000L + i,
+                                200L,
+                                Map.of("errorMessage", "TimeoutException")));
+            }
+            // 消息 fail-c 重试 2 次失败（未达到 DLQ 阈值，不应计入 DLQ）
+            for (int i = 0; i < 2; i++) {
+                records.add(
+                        consumeRecord(
+                                "fail-c",
+                                "test-topic",
+                                "test-group",
+                                false,
+                                3000L + i,
+                                150L,
+                                Map.of("errorMessage", "NullPointerException")));
+            }
 
-      DlqReport report = diagnosticsService.diagnoseDlq("test-group");
+            when(traceService.queryByGroup(eq("test-group"), anyLong(), anyLong()))
+                    .thenReturn(records);
 
-      assertThat(report.totalDlqCount()).isEqualTo(2);
-      assertThat(report.oldestDlqMessageTimestamp()).isEqualTo(1000L);
+            DlqReport report = diagnosticsService.diagnoseDlq("test-group");
+
+            assertThat(report).isNotNull();
+            assertThat(report.group()).isEqualTo("test-group");
+            assertThat(report.totalDlqCount()).isEqualTo(2);
+            assertThat(report.topFailureReasons()).isNotEmpty();
+            assertThat(report.topFailureReasons().get(0).reason())
+                    .isEqualTo("NullPointerException");
+            assertThat(report.topFailedTopics()).isNotEmpty();
+        }
+
+        @Test
+        @DisplayName("DLQ 主题记录 -> 正确识别死信消息")
+        void shouldIdentifyDlqMessagesByTopic() {
+            List<TraceRecord> records = new ArrayList<>();
+            records.add(
+                    consumeRecord(
+                            "dlq-1",
+                            "test-topic-dlq",
+                            "test-group",
+                            false,
+                            1000L,
+                            50L,
+                            Map.of("errorMessage", "DLQ error")));
+            records.add(
+                    consumeRecord(
+                            "dlq-2",
+                            "test-topic-dlq",
+                            "test-group",
+                            false,
+                            2000L,
+                            50L,
+                            Map.of("errorMessage", "DLQ error")));
+
+            when(traceService.queryByGroup(eq("test-group"), anyLong(), anyLong()))
+                    .thenReturn(records);
+
+            DlqReport report = diagnosticsService.diagnoseDlq("test-group");
+
+            assertThat(report.totalDlqCount()).isEqualTo(2);
+            assertThat(report.oldestDlqMessageTimestamp()).isEqualTo(1000L);
+        }
+
+        @Test
+        @DisplayName("无追踪数据 -> 返回空报告")
+        void shouldReturnEmptyReportWhenNoData() {
+            when(traceService.queryByGroup(eq("empty-group"), anyLong(), anyLong()))
+                    .thenReturn(Collections.emptyList());
+
+            DlqReport report = diagnosticsService.diagnoseDlq("empty-group");
+
+            assertThat(report).isNotNull();
+            assertThat(report.totalDlqCount()).isEqualTo(0);
+            assertThat(report.topFailureReasons()).isEmpty();
+            assertThat(report.topFailedTopics()).isEmpty();
+            assertThat(report.recommendation()).contains("追踪服务");
+        }
     }
 
-    @Test
-    @DisplayName("无追踪数据 -> 返回空报告")
-    void shouldReturnEmptyReportWhenNoData() {
-      when(traceService.queryByGroup(eq("empty-group"), anyLong(), anyLong()))
-          .thenReturn(Collections.emptyList());
+    @Nested
+    @DisplayName("getSlowConsumers - 慢消费者识别")
+    class GetSlowConsumers {
 
-      DlqReport report = diagnosticsService.diagnoseDlq("empty-group");
+        @Test
+        @DisplayName("存在慢消费者 -> 返回标识列表")
+        void shouldReturnSlowConsumers() {
+            StreamMQListenerContainer.ConsumerMetadata metadata =
+                    new StreamMQListenerContainer.ConsumerMetadata(
+                            "test-topic", "test-group", Object.class, String.class);
 
-      assertThat(report).isNotNull();
-      assertThat(report.totalDlqCount()).isEqualTo(0);
-      assertThat(report.topFailureReasons()).isEmpty();
-      assertThat(report.topFailedTopics()).isEmpty();
-      assertThat(report.recommendation()).contains("追踪服务");
-    }
-  }
+            List<TraceRecord> records = new ArrayList<>();
+            records.add(sendRecord("send-1", "test-topic", 1000L, 5L));
+            records.add(consumeRecord("consume-1", "test-topic", "test-group", true, 2000L, 8000L));
 
-  @Nested
-  @DisplayName("getSlowConsumers - 慢消费者识别")
-  class GetSlowConsumers {
+            when(listenerContainer.getConsumers()).thenReturn(List.of(metadata));
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
 
-    @Test
-    @DisplayName("存在慢消费者 -> 返回标识列表")
-    void shouldReturnSlowConsumers() {
-      StreamMQListenerContainer.ConsumerMetadata metadata =
-          new StreamMQListenerContainer.ConsumerMetadata(
-              "test-topic", "test-group", Object.class, String.class);
+            List<String> slowConsumers = diagnosticsService.getSlowConsumers();
 
-      List<TraceRecord> records = new ArrayList<>();
-      records.add(sendRecord("send-1", "test-topic", 1000L, 5L));
-      records.add(consumeRecord("consume-1", "test-topic", "test-group", true, 2000L, 8000L));
+            assertThat(slowConsumers).hasSize(1);
+            assertThat(slowConsumers.get(0)).isEqualTo("test-topic:test-group");
+        }
 
-      when(listenerContainer.getConsumers()).thenReturn(List.of(metadata));
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
+        @Test
+        @DisplayName("无消费者注册 -> 返回空列表")
+        void shouldReturnEmptyWhenNoConsumers() {
+            when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
 
-      List<String> slowConsumers = diagnosticsService.getSlowConsumers();
+            List<String> slowConsumers = diagnosticsService.getSlowConsumers();
 
-      assertThat(slowConsumers).hasSize(1);
-      assertThat(slowConsumers.get(0)).isEqualTo("test-topic:test-group");
+            assertThat(slowConsumers).isEmpty();
+        }
     }
 
-    @Test
-    @DisplayName("无消费者注册 -> 返回空列表")
-    void shouldReturnEmptyWhenNoConsumers() {
-      when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+    @Nested
+    @DisplayName("getAllBacklogs - 全量积压报告")
+    class GetAllBacklogs {
 
-      List<String> slowConsumers = diagnosticsService.getSlowConsumers();
+        @Test
+        @DisplayName("存在消费者 -> 返回积压报告列表")
+        void shouldReturnBacklogReports() {
+            StreamMQListenerContainer.ConsumerMetadata metadata =
+                    new StreamMQListenerContainer.ConsumerMetadata(
+                            "test-topic", "test-group", Object.class, String.class);
 
-      assertThat(slowConsumers).isEmpty();
+            List<TraceRecord> records = new ArrayList<>();
+            for (int i = 0; i < 5; i++) {
+                records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
+            }
+            for (int i = 0; i < 3; i++) {
+                records.add(
+                        consumeRecord(
+                                "consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
+            }
+
+            when(listenerContainer.getConsumers()).thenReturn(List.of(metadata));
+            when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong()))
+                    .thenReturn(records);
+
+            List<BacklogReport> backlogs = diagnosticsService.getAllBacklogs();
+
+            assertThat(backlogs).hasSize(1);
+            assertThat(backlogs.get(0).topic()).isEqualTo("test-topic");
+            assertThat(backlogs.get(0).group()).isEqualTo("test-group");
+            assertThat(backlogs.get(0).currentBacklog()).isEqualTo(2);
+        }
+
+        @Test
+        @DisplayName("无消费者注册 -> 返回空列表")
+        void shouldReturnEmptyWhenNoConsumers() {
+            when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
+
+            List<BacklogReport> backlogs = diagnosticsService.getAllBacklogs();
+
+            assertThat(backlogs).isEmpty();
+        }
     }
-  }
 
-  @Nested
-  @DisplayName("getAllBacklogs - 全量积压报告")
-  class GetAllBacklogs {
-
-    @Test
-    @DisplayName("存在消费者 -> 返回积压报告列表")
-    void shouldReturnBacklogReports() {
-      StreamMQListenerContainer.ConsumerMetadata metadata =
-          new StreamMQListenerContainer.ConsumerMetadata(
-              "test-topic", "test-group", Object.class, String.class);
-
-      List<TraceRecord> records = new ArrayList<>();
-      for (int i = 0; i < 5; i++) {
-        records.add(sendRecord("send-" + i, "test-topic", 1000L + i, 5L));
-      }
-      for (int i = 0; i < 3; i++) {
-        records.add(
-            consumeRecord("consume-" + i, "test-topic", "test-group", true, 2000L + i, 100L));
-      }
-
-      when(listenerContainer.getConsumers()).thenReturn(List.of(metadata));
-      when(traceService.queryByTopic(eq("test-topic"), anyLong(), anyLong())).thenReturn(records);
-
-      List<BacklogReport> backlogs = diagnosticsService.getAllBacklogs();
-
-      assertThat(backlogs).hasSize(1);
-      assertThat(backlogs.get(0).topic()).isEqualTo("test-topic");
-      assertThat(backlogs.get(0).group()).isEqualTo("test-group");
-      assertThat(backlogs.get(0).currentBacklog()).isEqualTo(2);
+    /** 创建发送追踪记录。 */
+    private TraceRecord sendRecord(
+            String messageId, String topic, long timestamp, long durationMillis) {
+        return new TraceRecord(
+                messageId,
+                topic,
+                "producer-group",
+                TraceType.SEND,
+                true,
+                timestamp,
+                durationMillis,
+                "trace-" + messageId,
+                Map.of());
     }
 
-    @Test
-    @DisplayName("无消费者注册 -> 返回空列表")
-    void shouldReturnEmptyWhenNoConsumers() {
-      when(listenerContainer.getConsumers()).thenReturn(Collections.emptyList());
-
-      List<BacklogReport> backlogs = diagnosticsService.getAllBacklogs();
-
-      assertThat(backlogs).isEmpty();
+    /** 创建消费追踪记录。 */
+    private TraceRecord consumeRecord(
+            String messageId,
+            String topic,
+            String group,
+            boolean success,
+            long timestamp,
+            long durationMillis,
+            Map<String, String> attrs) {
+        return new TraceRecord(
+                messageId,
+                topic,
+                group,
+                TraceType.CONSUME,
+                success,
+                timestamp,
+                durationMillis,
+                "trace-" + messageId,
+                attrs);
     }
-  }
 
-  /** 创建发送追踪记录。 */
-  private TraceRecord sendRecord(
-      String messageId, String topic, long timestamp, long durationMillis) {
-    return new TraceRecord(
-        messageId,
-        topic,
-        "producer-group",
-        TraceType.SEND,
-        true,
-        timestamp,
-        durationMillis,
-        "trace-" + messageId,
-        Map.of());
-  }
-
-  /** 创建消费追踪记录。 */
-  private TraceRecord consumeRecord(
-      String messageId,
-      String topic,
-      String group,
-      boolean success,
-      long timestamp,
-      long durationMillis,
-      Map<String, String> attrs) {
-    return new TraceRecord(
-        messageId,
-        topic,
-        group,
-        TraceType.CONSUME,
-        success,
-        timestamp,
-        durationMillis,
-        "trace-" + messageId,
-        attrs);
-  }
-
-  /** 创建消费追踪记录（无扩展属性）。 */
-  private TraceRecord consumeRecord(
-      String messageId,
-      String topic,
-      String group,
-      boolean success,
-      long timestamp,
-      long durationMillis) {
-    return consumeRecord(messageId, topic, group, success, timestamp, durationMillis, Map.of());
-  }
+    /** 创建消费追踪记录（无扩展属性）。 */
+    private TraceRecord consumeRecord(
+            String messageId,
+            String topic,
+            String group,
+            boolean success,
+            long timestamp,
+            long durationMillis) {
+        return consumeRecord(messageId, topic, group, success, timestamp, durationMillis, Map.of());
+    }
 }
